--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,117 @@
 .App {
   text-align: center;
+  z-index: 2;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.nav{
   display: flex;
-  flex-direction: column;
+  font-family:Verdana, Geneva, Tahoma, sans-serif ;
+  background-color: #282c34;
+  color: darkgrey;
+  min-height: 10vh;
+  align-items: center;
+  justify-content: space-around;
+  padding: 1px;
+}
+
+.box{
+  display: inline-flexbox;
+  flex-wrap: wrap;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+  justify-content: space-around;
+  margin-right: 5vh;
+  margin-left: 5vh;
+  margin-bottom: 5vh;
+}
+
+.card-box{
+  display: flex;
+  flex-wrap: wrap;
+  width: auto;
+  height: auto;
+  justify-content: space-around;
+}
+
+.card {  
+  width: 25%;
+  margin: 3px;
+}
+
+
+.card-body {
+  text-align: start;
+}
+
+.footer{
+  font-family:Verdana, Geneva, Tahoma, sans-serif ;
+  background-color: #282c34;
+  color: darkgrey;
+  min-height: 10vh;
+  text-align: center;
+}
+
+.box-form {
+  width: auto;
+  height: auto;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+}
+
+.productAdmin{
+  width: auto;
+  
+}
+
+.productList{
+  margin: 2em;
+  width: auto;
+  height: 200px;
+  overflow-y: scroll;
+}
+
+.addForm{
+  display: flex; 
+  align-items: center; 
+  justify-content: center;
+  height: 100%;
+}
+
+.carousel{
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+  width: auto;
 }
 
-.App-link {
-  color: #61dafb;
+
+.cart-list{
+  margin-top: 10px;
+  list-style: none;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.submenu {
+  position: relative;
 }
+
+.submenu #cart{
+  display: none;
+}
+
+.submenu:hover #cart{
+  display: block;
+  position: absolute;
+  right: 0;
+
+  top: 100%;
+  z-index: 1;
+  background-color: white;
+  padding: 10px;
+  min-width: 300px;
+  min-height: 400px;
+  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+  border-radius: 20px;
+
+  font-family:Verdana, Geneva, Tahoma, sans-serif ;
+  font-size: smaller;
+}
+
+
