--- a/src/App.css
+++ b/src/App.css
@@ -32,6 +32,10 @@
   margin-bottom: 5vh;
 }
 
+.carousel-box{
+  margin-top: 10px;
+}
+
 .card-box{
   display: flex;
   flex-wrap: wrap;
@@ -58,11 +62,24 @@
 }
 
 .footer{
+  display: flex;
   font-family:Verdana, Geneva, Tahoma, sans-serif ;
   background-color: #282c34;
   color: darkgrey;
   min-height: 10vh;
   text-align: center;
+  flex-direction: column;
+
+}
+
+.footer p {
+  font-size: 10%;
+}
+
+.links{
+  margin: 2em;
+  display: flex;
+  justify-content: space-around;
 }
 
 .box-form {
@@ -122,14 +139,14 @@
   position: relative;
 }
 
-.submenu #cart{
+.submenu #cart, #cart-empty{
   display: none;
 }
 
 .submenu:hover #cart{
   display: block;
   position: absolute;
-  right: 0;
+  left: 0;
 
   top: 100%;
   z-index: 1;
@@ -137,11 +154,32 @@
   padding: 10px;
   min-width: 300px;
   min-height: 400px;
+  box-shadow: rgba(68, 71, 73, 0.2) 0px 8px 24px;
+  border-radius: 5px;
+
+  font-family:Verdana, Geneva, Tahoma, sans-serif ;
+  font-size: smaller;
+}
+
+.submenu:hover #cart-empty{
+  display: flex;
+  position: absolute;
+  left: 0;
+
+  top: 100%;
+  z-index: 1;
+  background-color: white;
+  padding: 10px;
+  min-width: 300px;
+  min-height: 100px;
   box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
   border-radius: 20px;
 
   font-family:Verdana, Geneva, Tahoma, sans-serif ;
   font-size: smaller;
+
+  justify-content: space-around;
+  align-items: center;
 }
 
 
