--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,6 @@
 }
 
 
-
 .nav{
   display: flex;
   font-family:Verdana, Geneva, Tahoma, sans-serif ;
@@ -17,8 +16,8 @@
 }
 
 .box{
-  display: inline-flexbox;
-  flex-wrap: wrap;
+  display: flex;
+  flex-direction: column;
   box-shadow: 
     rgba(50, 50, 93, 0.25) 
     0px 50px 100px -20px, 
@@ -30,29 +29,29 @@
   margin-right: 5vh;
   margin-left: 5vh;
   margin-bottom: 5vh;
+
 }
 
-.carousel-box{
-  margin-top: 10px;
-}
+
 
 .card-box{
-  display: flex;
-  flex-wrap: wrap;
-  width: auto;
-  height: auto;
-  justify-content: space-around;
+  display: grid;
+  margin-top: 5px;
+  padding: 25px;
+  justify-content: space-between;
+  grid-template-columns: 23% 23% 23% 23%;
+  grid-auto-rows: minmax(50px, auto);
 }
 
 .card {  
-  width: 25%;
-  margin: 3px;
+  width: 100%;
+  margin: 5px;
   display: flex;
 }
 
 .card-img {
   width: 200px;
-  height: 200px;
+  height: 250px;
   align-self: center;
 }
 
@@ -73,7 +72,7 @@
 }
 
 .footer p {
-  font-size: 10%;
+  font-size: 30%;
 }
 
 .links{
@@ -113,21 +112,92 @@
   height: 100%;
 }
 
-.container {
-  max-width: 50%;
-  height: auto;
-}
-
-.container-box {
-  width: 50px;
-}
-
+/*carousel*/
 .carousel{
-  align-items: center;
-  justify-content: center;
-  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
-  width: auto;
+  position: relative;
+  height: 500px;
+  width: 80%;
+  margin: 20px 0px 50px;
 }
+
+.carousel__image{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.carousel__track-container{
+  background: rgb(140, 106, 63);
+  height: 100%;
+  position: relative;
+  overflow: hidden;
+}
+
+.carousel__track {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+  position: relative;
+  height: 100%;
+  transition: transform 250ms ease-in;
+}
+
+.carousel__slide{
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  width: 100%;
+}
+
+.carousel__button{
+  display: flex;
+  position: absolute;
+  background: transparent;
+  cursor: pointer;
+  top: 0%;
+  height: 100%;
+  width: 45px;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.carousel__button--left{
+  left: 0px;
+  z-index: 3;
+}
+
+.carousel__button--right{
+  right: 0px;
+  z-index: 3;
+}
+
+.carousel__button:hover{
+  background: white;
+  transition: 0.3s;
+}
+
+
+.carousel__nav{
+  display: flex;
+  justify-content: center;
+  padding: 10px 0;
+}
+
+.carousel__indicator{
+  border: 0;
+  border-radius: 50%;
+  width: 15px;
+  height: 15px;
+  background: rgb(0,0,0,.3);
+  margin: 0 12px;
+  cursor: pointer;
+}
+
+.carousel__indicator.current-slide{
+  background: rgb(0,0,0,.75);
+}
+
+.is-hidden {display: none;}
 
 
 .cart-list{
@@ -149,7 +219,7 @@
   left: 0;
 
   top: 100%;
-  z-index: 1;
+  z-index: 3;
   background-color: white;
   padding: 10px;
   min-width: 300px;
@@ -167,7 +237,7 @@
   left: 0;
 
   top: 100%;
-  z-index: 1;
+  z-index: 3;
   background-color: white;
   padding: 10px;
   min-width: 300px;
